# ScreenScribe

./: .dockerignore  .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
src/: app.py  config.py  language.py  speech.py  vision.py
